--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
             <p class="fst-italic">
               As much as you want to know about me, I want to know about you too :) So please get in touch with me.
             </p>
+            <a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="color:red; font-weight: bold;"><i class="fab fa-youtube"></i></a><a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="color: blue;font-weight: bolder;"> My YouTube Channel</a><a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="font-weight: bold;"><i class="fad fa-star"></i></a><a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="font-weight: bold;"><i class="fad fa-stars"></i></a>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -106,7 +107,7 @@
 </p><p> My other activities beyond the classroom include music (drums and piano), art, chess, badminton.
 </p><p> My current aim is to get into one of the best secondary schools of UK to join from September 2022. Keep watching the space for updates.
             </p>
-            <p>Please check out my youtube channel: <a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="color: blue;">My YouTube Channel</a></p>
+            <p>Please check out my youtube channel @ <a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="color:red; font-weight: bold;"><i class="fab fa-youtube"></i></a><a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="color: blue;font-weight: bolder;"> My YouTube Channel</a><a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="font-weight: bold;"><i class="fad fa-star"></i></a><a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="font-weight: bold;"><i class="fad fa-stars"></i></a></p>
           </div>
         </div>
 
