--- a/index.html
+++ b/index.html
@@ -492,13 +492,10 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Drums</h3>
+            <h3 class="resume-title">Piano</h3>
             <div class="resume-item">
               <h4>Inspiration</h4>
               <h5></h5>
-              <video width="200" height="400" controls autoplay preload="metadata">
-                <!--source src="assets/videos/drums.mp4" /-->
-              </video>
               <p><em> </em></p>
             </div>
             <div class="resume-item">
@@ -509,6 +506,9 @@
             <div class="resume-item">
               <h4>Grade 1</h4>
               <h5></h5>
+              <video width="200" height="400" controls preload="metadata">
+                <source src="assets/videos/piano.mp4" />
+              </video>
               <p><em> </em></p>
             </div>
             <div class="resume-item">
@@ -526,26 +526,46 @@
               <h5></h5>
               <p><em> </em></p>
             </div>
+            <div class="resume-item">
+              <h4>Watford Music Festival</h4>
+              <h5>The Watford Music Festival is an annual piano competition held in Watford</h5>
+              <p><em>On Febuary 13 for the first time I am going to compete im the the Grade 2 competition.</em></p>
+            </div>
           </div>
           <div class="col-lg-6">
-            <h3 class="resume-title">Piano</h3>
+            <h3 class="resume-title">Drums</h3>
             <div class="resume-item">
-              <h4></h4>
+              <h4>School</h4>
               <h5></h5>
-              <video width="200" height="400" controls autoplay preload="metadata">
-                <!--source src="assets/videos/piano.mp4" /-->
+              <p><em> </em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Grade 1</h4>
+              <h5></h5>
+              <video width="200" height="400" controls preload="metadata">
+                <source src="assets/videos/drumG1.MOV" />
               </video>
-
               <p><em> </em></p>
             </div>
             <div class="resume-item">
-              <h4>X</h4>
+              <h4>Grade 2</h4>
+              <h5></h5>
+              <video width="200" height="400" controls preload="metadata">
+                <source src="assets/videos/drumG2.mp4" />
+              </video>
+              <p><em> </em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Grade 3</h4>
               <h5></h5>
               <p><em> </em></p>
             </div>
             <div class="resume-item">
-              <h4>X</h4>
+              <h4>Grade 4</h4>
               <h5></h5>
+              <video width="200" height="400" controls preload="metadata">
+                <source src="assets/videos/drumG4.mov" >
+              </video>
               <p><em> </em></p>
             </div>
           </div>
