--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
               <h4>Grade 4</h4>
               <h5></h5>
               <video width="200" height="400" controls preload="metadata">
-                <source src="assets/videos/drumG4.mov" >
+                <source src="assets/videos/drumG4.MOV" >
               </video>
               <p><em> </em></p>
             </div>
