--- a/index.html
+++ b/index.html
@@ -101,11 +101,10 @@
               </div>
             </div>
             <p>
-            <p>
-              My favourite subject are Maths and Science.</p><p> I enjoy solving challenging questions in Maths and go beyond the National Year 6 Curriculumn (Yes, I can solve Simultaneous equations, trognimentry problems...).</p><p> I love doing science experiments and enjoyed using bunsen burners and testing chemical reactions of differnt chemicals at Hampton School as a part of Lion learning.
-</p><p> One of my biggest interests are computers. For more see Computing.
-</p><p> My other activities beyond the classroom include music (drums and piano), art, chess, badminton.
-</p><p> My current aim is to get into one of the best secondary schools of UK to join from September 2022. Keep watching the space for updates.
+            <p>My favourite subject are Maths and Science.</p><p> I enjoy solving challenging questions in Maths and go beyond the National Year 6 Curriculumn (Yes, I can solve Simultaneous equations, trognimentry problems...).</p><p> I love doing science experiments and enjoyed using bunsen burners and testing chemical reactions of differnt chemicals at Hampton School as a part of Lion learning.
+            </p><p> One of my biggest interests are computers. For more see Computing.
+            </p><p> My other activities beyond the classroom include music (drums and piano), art, chess, badminton.
+            </p><p> My current aim is to get into one of the best secondary schools of UK to join from September 2022. Keep watching the space for updates.
             </p>
             <p>Please check out my youtube channel @ <a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="color:red; font-weight: bold;"><i class="fab fa-youtube"></i></a><a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="color: blue;font-weight: bolder;"> My YouTube Channel</a><a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="font-weight: bold;"><i class="fad fa-star"></i></a><a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="font-weight: bold;"><i class="fad fa-stars"></i></a></p>
           </div>
@@ -254,7 +253,7 @@
             <div class="resume-item">
               <h4>The society</h4>
               <h5>2019</h5>
-              <p><em>I became one of the two leaders of an origami society. In this sselective group we created and taught origami</em></p>
+              <p><em>I became one of the two leaders of an origami society. In this selective group we created and taught origami.</em></p>
               <img src="./assets/img/oButterfly.jpg" style="width: 45%; padding: 2%;">
               <img src="./assets/img/frog.jpg" style="width: 45%; padding: 2%;">
               <p></p>
@@ -263,7 +262,7 @@
               <h4>The current</h4>
               <h5>2020-NOW</h5>
               <p><em>Now I am the origami master I have dreamed of.</em></p>
-              <p>I am now able to create broomsticks to magic stars and even have an origami website</p>
+              <p>I am now able to create broomsticks to magic stars and even have an origami website @ <a href="" style="font-weight: bold; color: blue;">My Origami Site</a></p>
               <img src="./assets/img/wheel.jpg" style="width: 45%; padding: 2%;">
               <img src="./assets/img/8NinjaStar.jpg" style="width: 45%; padding: 2%;">
             </div>
@@ -279,7 +278,7 @@
 
         <div class="section-title">
           <h2>Computing</h2>
-          <p>Computer Science is one of my favourite subjects. I enjoy programing and finding solutions to problems using software.</p>
+          <p>Computer Science is one of my favourite subjects.</p>
         </div>
 
         <div class="row">
@@ -528,7 +527,7 @@
             </div>
             <div class="resume-item">
               <h4>Watford Music Festival</h4>
-              <h5>The Watford Music Festival is an annual piano competition held in Watford</h5>
+              <h5>The Watford Music Festival is an annual piano competition held in Watford.</h5>
               <p><em>On Febuary 13 for the first time I am going to compete im the the Grade 2 competition.</em></p>
             </div>
           </div>
@@ -600,7 +599,7 @@
             <div class="resume-item">
               <h4>David Lloyd</h4>
               <h5></h5>
-              <p>We joined a club called David Lloyd right in Hampton. There I am being coached by Caroline Cooper</p>
+              <p>We joined a club called David Lloyd right in Hampton. There I am being coached by Caroline Cooper.</p>
             </div>
             <div class="resume-item">
               <h4>Creation of Y6 Badminton Club</h4>
