hampton and mensa logos

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <li><a href="#sports" class="nav-link scrollto"><i class="fad fa-shuttlecock"></i> <span>Sports</span></a></li>
         <li><a href="#services" class="nav-link scrollto"><i class="fad fa-books"></i> <span>Academia</span></a></li>
         <li><a href="#mensa" class="nav-link scrollto"><i class="fad fa-head-side-brain"></i> <span>Mensa</span></a></li>
-        <li><a href="#hampton" class="nav-link scrollto"><i class="fad fa-school"></i> <span>Hampton</span></a></li>
+        <li><a href="#hampton" class="nav-link scrollto"><i class="fad fa-school"></i> <span>Hampton School</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="fad fa-plus-circle"></i> <span>Other</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
@@ -755,28 +755,29 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/mensa.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Basics about me :</h3>
+            <h3>My favourite SIGs (Special Interest Groups) :</h3>
             <p class="fst-italic">
               As much as you want to know about me, I want to know about you too :) So please get in touch with me.
             </p>
             <div class="row">
-              <div class="col-lg-6">
+              <div class="col-lg-4">
                 <ul>
-                  <li><i class="fad fa-chevron-right" style="color: aquamarine;"></i> <strong>Birthday:</strong> <span>3rd June 2011</span></li>
-                  <li><i class="fad fa-chevron-right" style="color: blueviolet;"></i> <strong>Website:</strong> <span>shishir.vaddadi.uk</span></li>
-                  <li><i class="fad fa-chevron-right" style="color: fuchsia;"></i> <strong>Phone:</strong> <span>+44 789 490 9172</span></li>
-                  <li><i class="fad fa-chevron-right" style="color: cornflowerblue;"></i> <strong>City:</strong> <span>London, UK</span></li>
+                  <li class="sig"><span>AI</span></li>
+                  <li class="sig"><span>Codes and Ciphers</span></li>
                 </ul>
               </div>
-              <div class="col-lg-6">
+              <div class="col-lg-4">
                 <ul>
-                  <li><i class="fad fa-chevron-right" style="color: deeppink;"></i> <strong>Age:</strong> <span>10</span></li>
-                  <li><i class="fad fa-chevron-right" style="color: goldenrod;"></i> <strong>Education:</strong> <span>Year 6 student</span></li>
-                  <li><i class="fad fa-chevron-right" style="color: chocolate;"></i> <strong>Email:</strong> <span>shishir.vaddadi@gmail.com</span></li>
-                  <li><i class="fad fa-chevron-right" style="color: darkcyan;"></i> <strong>Freelance:</strong> <span>IT</span></li>
+                  <li class="sig"><span>10</span></li>
+                  <li class="sig"><span>Year 6 student</span></li>
+                </ul>
+              </div><div class="col-lg-4">
+                <ul>
+                  <li class="sig"><span>10</span></li>
+                  <li class="sig"><span>Year 6 student</span></li>
                 </ul>
               </div>
             </div>
@@ -804,12 +805,13 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/hampton_school.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Basics about me :</h3>
+            <h3>Admission Proccess: </h3>
             <p class="fst-italic">
-              As much as you want to know about me, I want to know about you too :) So please get in touch with me.
+              1. Register <br>
+              2. Write the exam in November to January <br>
             </p>
             <div class="row">
               <div class="col-lg-6">
