--- a/index.html
+++ b/index.html
@@ -759,9 +759,6 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>My favourite SIGs (Special Interest Groups) :</h3>
-            <p class="fst-italic">
-              As much as you want to know about me, I want to know about you too :) So please get in touch with me.
-            </p>
             <div class="row">
               <div class="col-lg-4">
                 <ul>
@@ -771,24 +768,23 @@
               </div>
               <div class="col-lg-4">
                 <ul>
-                  <li class="sig"><span>10</span></li>
-                  <li class="sig"><span>Year 6 student</span></li>
+                  <li class="sig"><span>Lego</span></li>
+                  <li class="sig"><span>Puzzle</span></li>
                 </ul>
               </div><div class="col-lg-4">
                 <ul>
-                  <li class="sig"><span>10</span></li>
-                  <li class="sig"><span>Year 6 student</span></li>
+                  <li class="sig"><span>Rollercoaster</span></li>
+                  <li class="sig"><span>Space</span></li>
                 </ul>
               </div>
             </div>
-            <p>
-            <p>My favourite subject are Maths and Science.</p><p> I enjoy solving challenging questions in Maths and go beyond the National Year 6 Curriculumn (Yes, I can solve simultaneous equations, trignometry problems...).</p><p> I love doing science experiments and enjoyed using bunsen burners and testing chemical reactions of differnt chemicals at Hampton School as a part of Lion learning.
-            </p><p> One of my biggest interests are computers. For more see Computing.
-            </p><p> My other activities beyond the classroom include music (drums and piano), art, chess, badminton.
-            </p><p> I have managed to join Hampton School with a 25% Edmund Pigeon Scholarship and will be starting in September.
-            </p><p> I also joined Mensa gaining an IQ of 162 on the Catell III B Scale.
-            </p>
-            <p>Please check out my youtube channel @ <a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="color:red; font-weight: bold;"><i class="fab fa-youtube"></i></a><a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="color: blue;font-weight: bolder;"> My YouTube Channel</a><a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="font-weight: bold;"><i class="fad fa-star"></i></a><a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="font-weight: bold;"><i class="fad fa-stars"></i></a></p>
+            <div class="col-lg-8 pt-4 pt-lg-0 content">
+              <h3>Next Event :</h3>
+              <div class="row">
+                <p>Mensa at Cambridge <br>
+                  This is a debate at Cambridge Uni about the effects of COVID-19
+                </p>
+              </div>
           </div>
         </div>
 
@@ -808,10 +804,6 @@
             <img src="assets/img/hampton_school.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Admission Proccess: </h3>
-            <p class="fst-italic">
-              1. Register <br>
-              2. Write the exam in November to January <br>
             </p>
             <div class="row">
               <div class="col-lg-6">
