--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
               <h3>Next Event :</h3>
               <div class="row">
                 <p>Mensa at Cambridge <br>
-                  This is a debate at Cambridge Uni about the effects of COVID-19
+                  This is a debate at Cambridge Uni about the effects of the COVID-19 pandemic
                 </p>
               </div>
           </div>
