--- a/index.html
+++ b/index.html
@@ -805,32 +805,31 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             </p>
+            <h3>Clubs I want to join: </h3>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="fad fa-chevron-right" style="color: aquamarine;"></i> <strong>Birthday:</strong> <span>3rd June 2011</span></li>
-                  <li><i class="fad fa-chevron-right" style="color: blueviolet;"></i> <strong>Website:</strong> <span>shishir.vaddadi.uk</span></li>
-                  <li><i class="fad fa-chevron-right" style="color: fuchsia;"></i> <strong>Phone:</strong> <span>+44 789 490 9172</span></li>
-                  <li><i class="fad fa-chevron-right" style="color: cornflowerblue;"></i> <strong>City:</strong> <span>London, UK</span></li>
+                  <li class="sig"><span>Backgammon</span></li>
+                  <li class="sig"><span>Chess</span></li>
+                  <li class="sig"><span>Rock Climbing</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="fad fa-chevron-right" style="color: deeppink;"></i> <strong>Age:</strong> <span>10</span></li>
-                  <li><i class="fad fa-chevron-right" style="color: goldenrod;"></i> <strong>Education:</strong> <span>Year 6 student</span></li>
-                  <li><i class="fad fa-chevron-right" style="color: chocolate;"></i> <strong>Email:</strong> <span>shishir.vaddadi@gmail.com</span></li>
-                  <li><i class="fad fa-chevron-right" style="color: darkcyan;"></i> <strong>Freelance:</strong> <span>IT</span></li>
+                  <li class="sig"><span>Lego Architecture</span></li>
+                  <li class="sig"><span>Model Aviation</span></li>
+                  <li class="sig"><span>Chemistry Club</span></li>
                 </ul>
               </div>
             </div>
             <p>
-            <p>My favourite subject are Maths and Science.</p><p> I enjoy solving challenging questions in Maths and go beyond the National Year 6 Curriculumn (Yes, I can solve simultaneous equations, trignometry problems...).</p><p> I love doing science experiments and enjoyed using bunsen burners and testing chemical reactions of differnt chemicals at Hampton School as a part of Lion learning.
-            </p><p> One of my biggest interests are computers. For more see Computing.
-            </p><p> My other activities beyond the classroom include music (drums and piano), art, chess, badminton.
-            </p><p> I have managed to join Hampton School with a 25% Edmund Pigeon Scholarship and will be starting in September.
-            </p><p> I also joined Mensa gaining an IQ of 162 on the Catell III B Scale.
-            </p>
-            <p>Please check out my youtube channel @ <a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="color:red; font-weight: bold;"><i class="fab fa-youtube"></i></a><a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="color: blue;font-weight: bolder;"> My YouTube Channel</a><a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="font-weight: bold;"><i class="fad fa-star"></i></a><a href="https://www.youtube.com/channel/UCrzkwpCytqi7wgifxqFgTMA" style="font-weight: bold;"><i class="fad fa-stars"></i></a></p>
+
+            <p>I want to go to Hampton for a number of reasons: </p>
+            <p class="fst-italic"> 1. There are a number of clubs and societies to join for all interests
+            <br> 2. It is only a 15 minute drive from home. 
+            <br> 3. I have affiliation with the school since Y3
+            <br> 4. I liked the lessons in Lion Learning
+            <br> 5. I got a scholarship</p>
           </div>
         </div>
 
