--- a/index.html
+++ b/index.html
@@ -781,8 +781,8 @@
             <div class="col-lg-8 pt-4 pt-lg-0 content">
               <h3>Next Event :</h3>
               <div class="row">
-                <p>Mensa at Cambridge <br>
-                  This is a debate at Cambridge Uni about the effects of the COVID-19 pandemic
+                <p>Haddenham Day<br>
+                  This is a fun day out in a historic villiage near Oxford.
                 </p>
               </div>
           </div>
@@ -862,7 +862,7 @@
                   </svg>
                   <i class="fad fa-chess"></i>
                 </div>
-                <h4><a href="">Chess</a></h4>
+                <h4>Chess</h4>
                 <p>Chess is an intellectual game with piece that move in a variety of ways.</p>
               </div>
             </a>
@@ -893,7 +893,7 @@
                   </svg>
                   <i class="fad fa-search-dollar"></i>
                 </div>
-                <h4><a href="">Coin Collecting</a></h4>
+                <h4>Coin Collecting</h4>
                 <p>Coin collecting is a fun thing to do in order to have the happiness of collecting.</p>
               </div>
               </a>
@@ -908,7 +908,7 @@
                   </svg>
                   <i class="fad fa-book-spells"></i>
                 </div>
-                <h4><a href="">Book Reviews</a></h4>
+                <h4>Book Reviews</h4>
                 <p>Book reviews ae a wonderful insight into the many wonderful and terrible books you may want to read.</p>
               </div>
               </a>
@@ -923,9 +923,10 @@
                   </svg>
                   <i class="fad fa-archway"></i>
                 </div>
-                <h4><a href="">History</a></h4>
+                <h4>History</h4>
                 <p>History is the study of the past and how civilisation developed.</p>
               </div>
+              </a>
             </div>
   
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
@@ -939,8 +940,9 @@
                 </div>
                 <h4>Geopolitics</h4>
                 <p>Geopolitics is the study of how countries interact with one another.</p>
-          </div>
             </div>
+            </a>
+          </div>
             
           
 
@@ -985,7 +987,7 @@
             </svg>
             <i class="fad fa-exclamation"></i>
           </div>
-          <h4><a href="">Fun Facts</a></h4>
+          <h4>Fun Facts</h4>
           <p>Fun Facts are fun insights into the many things across earth.</p>
         </div>
         </a>
