--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
   
           <div class="row">
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
-              <a href="other/maps.html">
+              <a href="other/chess.html">
               <div class="icon-box iconbox-blue ">
                 <div class="icon">
                   <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -885,7 +885,7 @@
             </div>
   
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-6" data-aos="zoom-in" data-aos-delay="100">
-              <a href="other/maps.html">
+              <a href="other/coin_collecting.html">
               <div class="icon-box iconbox-pink">
                 <div class="icon">
                   <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -900,7 +900,7 @@
             </div>
   
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
-              <a href="other/maps.html">
+              <a href="other/book_reviews.html">
               <div class="icon-box iconbox-teal">
                 <div class="icon">
                   <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -915,7 +915,7 @@
             </div>
   
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 col-lg-4" data-aos="zoom-in" data-aos-delay="300">
-              <a href="other/maps.html">
+              <a href="other/history.html">
               <div class="icon-box iconbox-purple">
                 <div class="icon">
                   <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -930,7 +930,7 @@
             </div>
   
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
-              <a href="other/maps.html">
+              <a href="other/geopolitics.html">
               <div class="icon-box iconbox-red">
                 <div class="icon">
                   <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -979,7 +979,7 @@
       
 
       <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-        <a href="other/maps.html">
+        <a href="other/fun_facts.html">
         <div class="icon-box iconbox-indigo">
           <div class="icon">
             <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
