--- a/other/book_reviews.html
+++ b/other/book_reviews.html
@@ -26,11 +26,13 @@
 
   <!-- Template Main CSS File -->
   <link href="../assets/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
 </head>
 <body>
     <div class="section-title subject">
         <h2>English</h2>
+        <p></p>
         <p>English is made up of reading - answering questions about a text - and writing - making up a story.</p>
     </div>  
 
