--- a/other/chess.html
+++ b/other/chess.html
@@ -26,11 +26,25 @@
 
   <!-- Template Main CSS File -->
   <link href="../assets/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
 
 </head>
 <body>
+  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
+  <!-- ======= Header ======= -->
+  <header id="header" class="d-flex flex-column justify-content-center">
+
+    <nav id="navbar" class="navbar nav-menu">
+      <ul>
+        <li><a href="../index.html" class="nav-link scrollto active"><i class="fad fa-home"></i> <span>Home</span></a></li>
+      </ul>
+    </nav><!-- .nav-menu -->
+
+  </header><!-- End Header -->
     <div class="section-title subject">
-        <h2>English</h2>
+        <h2>Chess</h2>
+        <p></p>
         <p>English is made up of reading - answering questions about a text - and writing - making up a story.</p>
     </div>  
 
