--- a/index.html
+++ b/index.html
@@ -480,6 +480,7 @@
         </div>
 
       </div>
+      <p><a href="./old/index.html"> Click here for my original website</a></p>
     </div>
     </section><!-- End Portfolio Section -->
 
@@ -709,22 +710,22 @@
             </div>
             </a>
           </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
-            <a href="./subjects/philosophy.html">
+  
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 col-lg-4" data-aos="zoom-in" data-aos-delay="300">
+            <a href="subjects/history.html">
             <div class="icon-box iconbox-purple">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
                   <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,566.797414625762C385.7384707136149,576.1784315230908,478.7894351017131,552.8928747891023,531.9192734346935,484.94944893311C584.6109503024035,417.5663521118492,582.489472248146,322.67544863468447,553.9536738515405,242.03673114598146C529.1557734026468,171.96086150256528,465.24506316201064,127.66468636344209,395.9583748389544,100.7403814666027C334.2173773831606,76.7482773500951,269.4350130405921,84.62216499799875,207.1952322260088,107.2889140133804C132.92018162631612,134.33871894543012,41.79353780512637,160.00259165414826,22.644507872594943,236.69541883565114C3.319112789854554,314.0945973066697,72.72355303640163,379.243833228382,124.04198916343866,440.3218312028393C172.9286146004772,498.5055451809895,224.45579914871206,558.5317968840102,300,566.797414625762"></path>
                 </svg>
-                <i class="fad fa-question-circle fa-2x"></i> 
+                <i class="fad fa-archway"></i>
               </div>
-              <h4>Philosophy</h4>
-              <p>Philosophy is a person's way of thinking about abstract things like life.</p>
+              <h4>History</h4>
+              <p>History is the study of the past and how civilisation developed.</p>
             </div>
             </a>
           </div>
-
+          
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <a href="./subjects/reasoning.html">
             <div class="icon-box iconbox-red">
@@ -913,18 +914,18 @@
               </div>
               </a>
             </div>
-  
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 col-lg-4" data-aos="zoom-in" data-aos-delay="300">
-              <a href="other/history.html">
+
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+              <a href="./other/philosophy.html">
               <div class="icon-box iconbox-purple">
                 <div class="icon">
                   <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
                     <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,566.797414625762C385.7384707136149,576.1784315230908,478.7894351017131,552.8928747891023,531.9192734346935,484.94944893311C584.6109503024035,417.5663521118492,582.489472248146,322.67544863468447,553.9536738515405,242.03673114598146C529.1557734026468,171.96086150256528,465.24506316201064,127.66468636344209,395.9583748389544,100.7403814666027C334.2173773831606,76.7482773500951,269.4350130405921,84.62216499799875,207.1952322260088,107.2889140133804C132.92018162631612,134.33871894543012,41.79353780512637,160.00259165414826,22.644507872594943,236.69541883565114C3.319112789854554,314.0945973066697,72.72355303640163,379.243833228382,124.04198916343866,440.3218312028393C172.9286146004772,498.5055451809895,224.45579914871206,558.5317968840102,300,566.797414625762"></path>
                   </svg>
-                  <i class="fad fa-archway"></i>
+                  <i class="fad fa-question-circle fa-2x"></i> 
                 </div>
-                <h4>History</h4>
-                <p>History is the study of the past and how civilisation developed.</p>
+                <h4>Philosophy</h4>
+                <p>Philosophy is a person's way of thinking about abstract things like life.</p>
               </div>
               </a>
             </div>
@@ -1008,8 +1009,8 @@
     <div class="container">
       <h1>Shishir Vaddadi</h1>
       <i>A person like no other.</i>
+      <p>@ shishir.vaddadi@gmail.com</p>
     </div>
-
   </footer><!-- End Footer -->
 
   <div id="preloader"></div>
