--- a/subjects/history.html
+++ b/subjects/history.html
@@ -38,7 +38,7 @@
   </a>
   </div>
     <div class="section-title subject">
-        <h2>Chess</h2>
+        <h2>History</h2>
         <p></p>
         <p>English is made up of reading - answering questions about a text - and writing - making up a story.</p>
     </div>  
