--- a/origami/index.html
+++ b/origami/index.html
@@ -251,13 +251,58 @@
                     </div>
                 </div>
 
-            </div>
-            <div class="row">
-                <br/>
-            </div>
-        <!--/div>
-        <div class="col-1"></div>
-        </div-->
+                <div class="row">
+                    <br />
+                </div>
+    
+                <div class="row">
+                    <div class="col-4">
+                        <div class="card text-dark border-dark shadow">
+                            <p class="lead">panda</p>
+                            <a href="https://origami.me/panda/" title="panda origami instructions"><img
+                                    src="images/panda.png" alt="panda origami instructions" class="origamiCards" /></a>
+                            <ol>
+                                <li class="user-select-all">All pandas on Earth rightfully belong to China, even if they're
+                                    in a
+                                    zoo
+                                </li>
+                                <li class="user-select-all">Panda cubs love to play with their mummy a lot</li>
+                            </ol>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card shadow" style="color: rgb(255, 185, 93); border-color: rgb(255, 185, 93);">
+                            <p class="lead">teddy bear</p>
+                            <a href="https://origami.me/teddy-bear/" title="teddy bear origami instructions"><img
+                                    src="images/frog.png" alt="teddy bear origami instructions" class="origamiCards" /></a>
+                            <ol>
+                                <li class="user-select-all">Winnie the Pooh was a real bear, who's death memorial is in ZSL
+                                    London
+                                    Zoo
+                                </li>
+                                <li class="user-select-all">The largest teddy bear is 16.8 meters tall and is displayed in
+                                    Exploration
+                                    Place, Wichita, Kansas</li>
+                            </ol>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card text-info border-info shadow">
+                            <p class="lead">pigeon</p>
+                            <a href="https://origami.me/pigeon/" title="pigeon origami instructions"><img
+                                    src="images/pigeon.png" alt="pigeon origami instructions" class="origamiCards" /></a>
+                            <ol>
+                                <li class="user-select-all">Pigeons are intelllegent and can differentiate humans in a
+                                    photograph
+                                </li>
+                                <li class="user-select-all">When they migrate they follow roads and even turn at junctions
+                                </li>
+                                <li class="user-select-all">They are social animals and as such, can be seen in groups of
+                                    20-30
+                                </li>
+                            </ol>
+                        </div>
+                    </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
