--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <li><a href="#music" class="nav-link scrollto"><i class="fad fa-music" style="--fa-primary-color: green;"></i> <span>Music</span></a></li>
         <li><a href="#sports" class="nav-link scrollto"><i class="fad fa-shuttlecock" style="--fa-primary-color: blue;"></i> <span>Sports</span></a></li>
         <li><a href="#services" class="nav-link scrollto"><i class="fad fa-books" style="--fa-primary-color: indigo;"></i> <span>Academia</span></a></li>
-        <li><a href="#mensa" class="nav-link scrollto"><i class="fad fa-brain" style="--fa-primary-color: purple;"></i> <span>Mensa</span></a></li>
-        <li><a href="#hampton" class="nav-link scrollto"><i class="fad fa-school" style="--fa-primary-color: black;"></i> <span>Hampton School</span></a></li>
-        <li><a href="#contact" class="nav-link scrollto"><i class="fad fa-plus-circle" style="--fa-primary-color: grey;"></i> <span>Other</span></a></li>
+        <li><a href="#mensa" class="nav-link scrollto"><i class="fad fa-head-side-brain" style="--fa-primary-color: violet;"></i> <span>Mensa</span></a></li>
+        <li><a href="#hampton" class="nav-link scrollto"><i class="fad fa-school" style="--fa-primary-color: black; --fa-secondary-color: goldenrod; --fa-secondary-opacity: 100;"></i> <span>Hampton School</span></a></li>
+        <li><a href="#contact" class="nav-link scrollto"><i class="fad fa-plus-circle" style="--fa-primary-color: magenta;"></i> <span>Other</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -686,7 +686,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <a href="./subjects/math.html">
-            <div class="icon-box iconbox-yellow">
+            <div class="icon-box iconbox-orange">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
                   <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,541.5067337569781C382.14930387511276,545.0595476570109,479.8736841581634,548.3450877840088,526.4010558755058,480.5488172755941C571.5218469581645,414.80211281144784,517.5187510058486,332.0715597781072,496.52539010469104,255.14436215662573C477.37192572678356,184.95920475031193,473.57363656557914,105.61284051026155,413.0603344069578,65.22779650032875C343.27470386102294,18.654635553484475,251.2091493199835,5.337323636656869,175.0934190732945,40.62881213300186C97.87086631185822,76.43348514350839,51.98124368387456,156.15599469081315,36.44837278890362,239.84606092416172C21.716077023791087,319.22268207091537,43.775223500013084,401.1760424656574,96.891909868211,461.97329694683043C147.22146801428983,519.5804099606455,223.5754009179313,538.201503339737,300,541.5067337569781"></path>
@@ -701,7 +701,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-6" data-aos="zoom-in" data-aos-delay="100">
             <a href="./subjects/science.html">
-            <div class="icon-box iconbox-red">
+            <div class="icon-box iconbox-yellow">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
                   <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,503.46388370962813C374.79870501325706,506.71871716319447,464.8034551963731,527.1746412648533,510.4981551193396,467.86667711651364C555.9287308511215,408.9015244558933,512.6030010748507,327.5744911775523,490.211057578863,256.5855673507754C471.097692560561,195.9906835881958,447.69079081568157,138.11976852964426,395.19560036434837,102.3242989838813C329.3053358748298,57.3949838291264,248.02791733380457,8.279543830951368,175.87071277845988,42.242879143198664C103.41431057327972,76.34704239035025,93.79494320519305,170.9812938413882,81.28167332365135,250.07896920659033C70.17666984294237,320.27484674793965,64.84698225790005,396.69656628748305,111.28512138212992,450.4950937839243C156.20124167950087,502.5303643271138,231.32542653798444,500.4755392045468,300,503.46388370962813"></path>
@@ -716,7 +716,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
             <a href="./subjects/geography.html">
-            <div class="icon-box iconbox-teal">
+            <div class="icon-box iconbox-green">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
                   <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,532.3542879108572C369.38199826031484,532.3153073249985,429.10787420159085,491.63046689027357,474.5244479745417,439.17860296908856C522.8885846962883,383.3225815378663,569.1668002868075,314.3205725914397,550.7432151929288,242.7694973846089C532.6665558377875,172.5657663291529,456.2379748765914,142.6223662098291,390.3689995646985,112.34683881706744C326.66090330228417,83.06452184765237,258.84405631176094,53.51806209861945,193.32584062364296,78.48882559362697C121.61183558270385,105.82097193414197,62.805066853699245,167.19869350419734,48.57481801355237,242.6138429142374C34.843463184063346,315.3850353017275,76.69343916112496,383.4422959591041,125.22947124332185,439.3748458443577C170.7312796277747,491.8107796887764,230.57421082200815,532.3932930995766,300,532.3542879108572"></path>
@@ -724,14 +724,14 @@
                 <i class="fad fa-globe-stand"></i>
               </div>
               <h4>Geography and Maps</h4>
-              <p>Geography is the explanation to why the physical and manmade propoties of earth exist and how they do so. Maps are tools used to dive deeper into the world's secrets.</p>
+              <p>Geography is the physical and manmade propoties of earth. Maps are tools used to understand geography.</p>
             </div>
             </a>
           </div>
   
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 col-lg-4" data-aos="zoom-in" data-aos-delay="300">
             <a href="subjects/history.html">
-            <div class="icon-box iconbox-purple">
+            <div class="icon-box iconbox-red">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
                   <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,566.797414625762C385.7384707136149,576.1784315230908,478.7894351017131,552.8928747891023,531.9192734346935,484.94944893311C584.6109503024035,417.5663521118492,582.489472248146,322.67544863468447,553.9536738515405,242.03673114598146C529.1557734026468,171.96086150256528,465.24506316201064,127.66468636344209,395.9583748389544,100.7403814666027C334.2173773831606,76.7482773500951,269.4350130405921,84.62216499799875,207.1952322260088,107.2889140133804C132.92018162631612,134.33871894543012,41.79353780512637,160.00259165414826,22.644507872594943,236.69541883565114C3.319112789854554,314.0945973066697,72.72355303640163,379.243833228382,124.04198916343866,440.3218312028393C172.9286146004772,498.5055451809895,224.45579914871206,558.5317968840102,300,566.797414625762"></path>
@@ -921,7 +921,7 @@
 
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
               <a href="./other/philosophy.html">
-              <div class="icon-box iconbox-purple">
+              <div class="icon-box iconbox-pink">
                 <div class="icon">
                   <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
                     <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,566.797414625762C385.7384707136149,576.1784315230908,478.7894351017131,552.8928747891023,531.9192734346935,484.94944893311C584.6109503024035,417.5663521118492,582.489472248146,322.67544863468447,553.9536738515405,242.03673114598146C529.1557734026468,171.96086150256528,465.24506316201064,127.66468636344209,395.9583748389544,100.7403814666027C334.2173773831606,76.7482773500951,269.4350130405921,84.62216499799875,207.1952322260088,107.2889140133804C132.92018162631612,134.33871894543012,41.79353780512637,160.00259165414826,22.644507872594943,236.69541883565114C3.319112789854554,314.0945973066697,72.72355303640163,379.243833228382,124.04198916343866,440.3218312028393C172.9286146004772,498.5055451809895,224.45579914871206,558.5317968840102,300,566.797414625762"></path>
@@ -961,7 +961,7 @@
                 <i class="fad fa-wand-magic "></i>
               </div>
               <h4>Harry Potter and the Wizarding World</h4>
-              <p>Harry Potter is my favourite set of stories</p>
+              <p>Harry Potter is my favourite set of stories.</p>
             </div>
             </a>
           </div>
@@ -969,7 +969,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretchx " data-aos="zoom-in" data-aos-delay="100">
           <a href="other/maps.html">
-          <div class="icon-box iconbox-orange">
+          <div class="icon-box iconbox-purple">
             <div class="icon">
               <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
                 <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,541.5067337569781C382.14930387511276,545.0595476570109,479.8736841581634,548.3450877840088,526.4010558755058,480.5488172755941C571.5218469581645,414.80211281144784,517.5187510058486,332.0715597781072,496.52539010469104,255.14436215662573C477.37192572678356,184.95920475031193,473.57363656557914,105.61284051026155,413.0603344069578,65.22779650032875C343.27470386102294,18.654635553484475,251.2091493199835,5.337323636656869,175.0934190732945,40.62881213300186C97.87086631185822,76.43348514350839,51.98124368387456,156.15599469081315,36.44837278890362,239.84606092416172C21.716077023791087,319.22268207091537,43.775223500013084,401.1760424656574,96.891909868211,461.97329694683043C147.22146801428983,519.5804099606455,223.5754009179313,538.201503339737,300,541.5067337569781"></path>
@@ -977,7 +977,7 @@
               <i class="fad fa-archway"></i>
             </div>
             <h4>History</h4>
-            <p>History is the study of the past.</p>
+            <p>History is the study of the past. It helps us understand more about why current occurances are happening.</p>
           </div>
           </a>
         </div>
